--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sq012week1",
+  "name": "chuxxy18-onramp-weekly-task-week-1",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,5 +8,7 @@
   },
   "dependencies": {
     "jest": "^27.5.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
